--- a/HouseRentingSystem.Web/Views/Home/Index.cshtml
+++ b/HouseRentingSystem.Web/Views/Home/Index.cshtml
@@ -53,26 +53,17 @@
 
 <div class="row">
     <div class="col-12 text-center">
-        <button class="btn btn-primary" id="statistics-button">Show Statistics</button>
+        <button class="btn btn-primary" id="statistics_btn">Show Statistics</button>
     </div>
 </div>
 
-<div class="mt-4 p-5 bg-light d-none" id="statistics">
+<div class="mt-4 p-5 bg-light d-none" id="statistics_box">
     <div class="row">
-        <h2 class="col-md-6 text-center" id="total-houses"></h2>
-        <h2 class="col-md-6 text-center" id="total-rents"></h2>
+        <h2 class="col-md-6 text-center" id="total_houses"></h2>
+        <h2 class="col-md-6 text-center" id="total_rents"></h2>
     </div>
 </div>
 
 @section Scripts{
-    <script>
-        $('#statistics-button').on('click', ev => {
-            $.get('/api/statistics', (data) => {
-                $('#total-houses').text(data.totalHouses + " Houses");
-                $('#total-rents').text(data.totalRents + " Rents");
-                $('#statistics').removeClass('d-none');
-                $('#statistics-button').hide();
-            });
-        });
-    </script>
+    <script>statistics();</script>
 }
