--- a/HouseRentingSystem.Web/Views/Shared/_Layout.cshtml
+++ b/HouseRentingSystem.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
 ﻿@using static HouseRentingSystem.Common.GeneralApplicationConstants;
+@using HouseRentingSystem.Services.Data.Interfaces
+@using HouseRentingSystem.Web.Infrastructure.Extensions
+
+@inject IAgentService AgentService
+@{
+    bool isUserAgent = await AgentService.AgentExistsByUserIdAsync(User.GetId());
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,9 +40,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Mine">My Houses</a>
                             </li>
-                            <li class="nav-item">
+                            if (isUserAgent)
+                            {
+                                <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Add">Add House</a>
                             </li>
+                            }                            
                         }
                     </ul>
                     <partial name="_LoginPartial" />
