--- a/HouseRentingSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HouseRentingSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,16 @@
 ﻿@using HouseRentingSystem.Data.Models;
 
+@using HouseRentingSystem.Services.Data.Interfaces
+@using HouseRentingSystem.Web.Infrastructure.Extensions
 @using Microsoft.AspNetCore.Identity
+
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject IAgentService AgentService
+
+@{
+    bool isUserAgent = await AgentService.AgentExistsByUserIdAsync(User.GetId());
+}
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -10,9 +18,12 @@
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello, @User.Identity?.Name!</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Agent" asp-action="Become" title="Become Agent">Want to become an Agent?</a>
-    </li>
+    if (!isUserAgent)
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Agent" asp-action="Become" title="Become Agent">Want to become an Agent?</a>
+            </li>
+        }    
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
