--- a/HouseRentingSystem.Web/Views/Home/Index.cshtml
+++ b/HouseRentingSystem.Web/Views/Home/Index.cshtml
@@ -1,4 +1,13 @@
-﻿@model IEnumerable<IndexViewModel>
+﻿@using HouseRentingSystem.Services.Data.Interfaces;
+@using HouseRentingSystem.Web.Infrastructure.Extensions;
+@model IEnumerable<IndexViewModel>
+
+@inject IAgentService AgentService
+
+@{
+    bool isUserAgent = await AgentService.AgentExistsByUserIdAsync(User.GetId());
+}
+
 @{
     ViewData["Title"] = "Home Page";
     var houses = Model.ToList();
@@ -15,8 +24,11 @@
         <p class="lead">
             @if (User.Identity?.IsAuthenticated ?? false)
             {
-                <a asp-controller="House" asp-action="Add" class="btn btn-primary btn-lg"
-                   role="button">Add House</a>
+                if (isUserAgent)
+                {
+                    <a asp-controller="House" asp-action="Add" class="btn btn-primary btn-lg"
+                       role="button">Add House</a>
+                }              
             }
         </p>
     </div>
