--- a/HouseRentingSystem.Web/Views/House/_HousePartial.cshtml
+++ b/HouseRentingSystem.Web/Views/House/_HousePartial.cshtml
@@ -4,11 +4,14 @@
 @model HouseAllViewModel
 
 @inject IAgentService AgentService
+@inject IHouseService HouseService
 
 @{
     bool isUserAgent = await AgentService.AgentExistsByUserIdAsync(User.GetId());
     bool isAgentOwnerOfTheHouse = await AgentService.HasHouseWithIdAsync(User.GetId(), Model.Id);
+    bool isRenterOwnerOfTheHouse = await HouseService.IsRentedByUserWithRenterIdÁsync(Model.Id, User.GetId());
 }
+
 <div class="col-md-4">
     <div class="card mb-3">
         <img class="card-img-top" src="@Model.ImageUrl" alt="House Image">
@@ -29,20 +32,20 @@
                 {
                     <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id"
                         class="btn btn-warning">Edit</a>
-                    <a asp-controller="House" asp-action="Delete" asp-routeid="@Model.Id"
+                    <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id"
                         class="btn btn-danger">Delete</a>                   
                 }
 
                 <p></p>
 
-                @if (!Model.IsRented)
+                @if (!Model.IsRented && !isUserAgent)
                 {
                     <form class="input-group-sm" asp-controller="House"
                           asp-action="Rent" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Rent" />
                     </form>
                 }
-                else
+                else if (Model.IsRented && !isUserAgent && isRenterOwnerOfTheHouse)
                 {
                     <form asp-controller="House" asp-action="Leave"
                           asp-route-id="@Model.Id" method="post">
